--- a/css/style.css
+++ b/css/style.css
@@ -29,9 +29,10 @@
   white-space: pre;
   font-family: 'Source Code Pro';
   font-weight: 400;
+  font-size: 0.8em;
   color: #d9d9d9;
   position: absolute;
-  letter-spacing: -0.1em;
+  z-index: -1;
 }
 
 .code-only {
@@ -42,16 +43,16 @@
   content: none !important;
 }
 .pre {
-  right: 3.65em;
+  right: 4.5em;
 }
 .coffee span:before {
-  content: "     ";
+  content: "      ";
 }
 .powered span:before {
-  content: "       ";
+  content: "        ";
 }
 .code span:before {
-  content: "    ";
+  content: "     ";
 }
 
 .coffee {
