Push code back in to line with text

--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,7 @@
   font-family: 'Source Code Pro';
   font-weight: 500;
   font-size: 0.8em;
+  line-height: 1em;
   color: #d9d9d9;
   position: absolute;
   z-index: -1;
